Refactor JsonAdaptedTutorials